04_ingress/black-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: black-web-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: black-web
  template:
    metadata:
      labels:
        app: black-web
    spec:
      automountServiceAccountToken: false
      containers:
      - name: black-web
        image: docker.io/library/nginx
        resources:
          limits:
            memory: 100Mi
            ephemeral-storage: "2Gi"
          requests:
            cpu: 0.5
            memory: 100Mi
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: black-web-service
spec:
  selector:
    app: black-web
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: ClusterIP
