04_ingress/black-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: black-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: black-out.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: black-web-service
            port:
              number: 80
